Fixes layout issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ header {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     height: 10%;
-    margin-bottom: 0;
+    margin: 0;
 }
 header h1 {
     text-align: center;
@@ -26,27 +26,46 @@ header h1 {
 #mobile-controllers {
     display: none;
 }
-#messages {
+#users {
     display: inline-block;
-    width: 80%;
-    height: 98%;
+    box-sizing: border-box;
+    width:19.7%;
+    height: 100%;
     margin: 0;
+    padding: 1rem;
+    overflow-y: scroll;
+    float: left;
+}
+#users h3 {
+    font-size: 2rem;
+}
+#chat-window {
+    display: inline-block;
+    box-sizing: border-box;
     position: relative;
+    width: 80%;
+    height: 92%;
+    margin: 0;
+    padding: 0;
+    float: right;
+    
+}
+#messages {
+    display: block;
     box-sizing: border-box;
     background-color: white;
     overflow-y: scroll;
-    
+    margin: 0;
+    height: 100%;
 }
-
-#messages::-webkit-scrollbar {
-    width: 1em;
+::-webkit-scrollbar {
+    width: 0.7em;
 }
-#messages::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     border-radius: 10px;
 }
- 
-#messages::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
@@ -57,8 +76,7 @@ header h1 {
 }
 #messages-form {
     display: block;
-    position: absolute;
-    bottom: 0;
+    height: 5%;
     margin-bottom: 0;
 }
 #messages-form input[type="text"] {
@@ -66,21 +84,8 @@ header h1 {
     margin: 0;
 }
 #messages-form input[type="submit"] {
-    width: 14%;
+    width: 14.2%;
     margin: 0;
-}
-#users {
-    display: inline-block;
-    position: relative;
-    box-sizing: border-box;
-    width:19.7%;
-    height: 98%;
-    margin: 0;
-    padding: 1rem;
-    overflow-y: scroll;
-}
-#users h3 {
-    font-size: 2rem;
 }
 button {
     margin: 0px;
